--- a/ansible-demo/httpd2.yml
+++ b/ansible-demo/httpd2.yml
@@ -6,11 +6,17 @@
 
   vars:
     pack_name: httpd
-    serv_name: httpd
+  vars_files:
+    - web_var.yml
+
 
   tasks:
     - name: Install {{ pack_name }}
       yum: pkg={{ pack_name }} state=installed
-    - name: start {{ serv_name }}
-      service: name={{ serv_name }} state=started
+      notify: start httpd  
+#    - name: start {{ serv_name }}
+#      service: name={{ serv_name }} state=started
+  handlers:
+    - name: start httpd
+      action: service name=httpd state=started
 ...
